# football-player-clustering

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: 03_clustering_experiments.ipynb
scripts/: build_dataset.py  inspect_dataset.py  run_clustering.py  run_preprocessing.py
src/: config.py
src/clustering/: dbscan_model.py  evaluation.py  gmm_model.py  kmeans_model.py  spectral_model.py
src/data_loading/: loader.py  merge.py
src/preprocessing/: cleaning.py  feature_engineering.py  filtering.py
