[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "football_player_clustering"
version = "0.1.0"
description = "Clustering football players using multi-source performance data"
authors = [
    { name = "Mateja Janic" }
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]